# Copyright 2017 Intel Corporation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ------------------------------------------------------------------------------

[package]
name = "sawtooth-sdk"
version = "0.5.3"
authors = ["Bitwise IO, Inc.", "Intel Corporation"]
build = "build.rs"
license = "Apache-2.0"
description = """\
    Hyperledger Sawtooth is an enterprise blockchain platform for building \
    distributed ledger applications and networks.
"""
repository = "http://github.com/hyperledger/sawtooth-sdk-rust"
edition = "2018"

[features]
default = ["pem"]

stable = [
    "default",
]

experimental = []

# Add support for loading PEM encoded private keys
pem = ["openssl"]

[dependencies]
hex = "0.4"
protobuf="2"
secp256k1 = "0.27"
rand = { version = "0.8", features = ["getrandom"]}
sha2 = "0.10"
zmq = "0.9"
uuid = { version = "0.8", features = ["v4"] }
log = "0.4"
libc = "0.2"
ctrlc = { version = "3.0", features = ["termination"] }
openssl = { version = "0.10", optional = true }

[dev-dependencies]
env_logger = "0.9"

[build-dependencies]
protoc-rust = "2.0"
glob = "0.3"

[package.metadata.docs.rs]
features = [
  "stable",
  "experimental"
]
