# Copyright 2018 Bitwise IO, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# -----------------------------------------------------------------------------

[package]
name = "sawtooth-xo-tp-rust"
version = "0.4.3"
authors = ["Bitwise IO, Inc."]
edition = "2018"
license = "Apache-2.0"
description = """\
    Sawtooth XO is a Sawtooth transaction handler for executing tic-tac-toe \
    (or noughts and crosses) transactions as part of Hyperledger Sawtooth
"""

[lib]
name = "sawtooth_xo"
path = "src/lib.rs"

[[bin]]
name = "xo-tp-rust"
path = "src/main.rs"

[dependencies]
clap = "2"
cfg-if = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
rust-crypto-wasm = "0.3"
sabre-sdk = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rust-crypto = "0.2"
sawtooth-sdk = { path = "../.." }
log = "0.4"
log4rs = "0.8"
